--- a/src/index.html
+++ b/src/index.html
@@ -10,58 +10,10 @@
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
     <title>JS Animate based on scrolling</title>
-    <link rel="stylesheet" href="app.css" />
   </head>
+
   <body>
-    <div asscroll-container>
-      <main>
-        <section class="level">
-          <div class="level__background level__background--1"></div>
-          <div class="level__content">
-            <h2>Level 1</h2>
-          </div>
-        </section>
-        <section class="level">
-          <div class="level__background level__background--2"></div>
-          <div class="level__content">
-            <h2>Level 2</h2>
-          </div>
-        </section>
-        <section class="level">
-          <div class="level__background level__background--3"></div>
-          <div class="level__content">
-            <h2>Level 3</h2>
-          </div>
-        </section>
-        <section class="level">
-          <div class="level__background level__background--4"></div>
-          <div class="level__content">
-            <h2>Level 4</h2>
-          </div>
-        </section>
-      </main>
-
-      <div class="cube__container">
-        <div class="cube">
-          <div class="face top">Top</div>
-          <div class="face bottom">Bottom</div>
-          <div class="face left">Left</div>
-          <div class="face right">Right</div>
-          <div class="face front">Front</div>
-          <div class="face back">Back</div>
-        </div>
-      </div>
-
-      <div class="properties">
-        <pre>targetPos: <span data-targetPos>0</span></pre>
-        <pre>currentPos: <span data-currentPos>0</span></pre>
-        <pre>maxScroll: <span data-maxScroll>0</span></pre>
-        <pre>scrollEnd: <span data-scrollEnd>0</span></pre>
-        <pre>scrollPercent: <span data-scrollPercent>0</span></pre>
-      </div>
-
-      <script src="https://cdn.jsdelivr.net/npm/@ashthornton/asscroll@2.0.6/build/asscroll.min.js"></script>
-      <script src="bundle.js"></script>
-    </div>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
   </body>
 </html>
